replaced materialize css with bootstrap plus custom theme

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>client</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  <body class="grey lighten-5">
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
